implemented mail classes

--- a/src/SimpleMail/SimpleMail.csproj
+++ b/src/SimpleMail/SimpleMail.csproj
@@ -40,8 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mail\FluentMailMessage.cs" />
+    <Compile Include="Mail\IMail.cs" />
+    <Compile Include="Mail\IMailBuilder.cs" />
+    <Compile Include="Mail\MailFactory.cs" />
+    <Compile Include="Mail\MailMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
