--- a/src/SimpleMail.Test/SimpleMail.Test.csproj
+++ b/src/SimpleMail.Test/SimpleMail.Test.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FluentMailMessageTest.cs" />
+    <Compile Include="MailMessageTest.cs" />
+    <Compile Include="PostalServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
